# middleware/validate.js
@@ -25,6 +25,29 @@ validator(req.body, validationRule, {}, (err, status) => {
    });
 };
 
+const saveCar = (req, res, next) => {
+    const validationRule = {
+        "make": "required|string",
+        "model": "required|string",
+        "color": "required|email",
+  
+}
+
+validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+        res.status(412)
+            .send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+    } else {
+        next();
+    }
+   });
+};
+
 module.exports = {
- saveFriend
+ saveFriend,
+ saveCar
 };
