# routes/cars.js
@@ -1,0 +1,14 @@
+const router = require('express').Router();
+// const validation = require('../middleware/validate')
+
+const carsController = require('../controllers/cars');
+
+const { isAuthenticated } = require('../middleware/authenticate')
+
+router.get('/', carsController.getAll);
+router.get('/:id', carsController.getSingle);
+router.post('/', isAuthenticated, carsController.createCar);
+router.put('/:id', isAuthenticated ,carsController.updateCar);
+router.delete('/:id',isAuthenticated, carsController.deleteCar);
+
+module.exports = router;
